# rust-todo-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rocket.toml
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/entities/: task.rs  user.rs
crates/migration/src/: lib.rs  m20240624_213509_task_create.rs  m20240625_184538_user_create.rs
crates/migrations/: Cargo.toml
crates/migrations/src/: lib.rs  m20240624_213509_task_create.rs  m20240625_184538_user_create.rs  m20240625_193356_task_add_user_id.rs  m20240625_193356_user_task_relations.rs  m20240625_200306_user_task_relations.rs
crates/services/: Cargo.toml
crates/services/src/: lib.rs
crates/services/src/auth/: jwt.rs
crates/services/src/mutations/: task.rs
crates/services/src/queries/: task.rs
crates/services/src/task/: mod.rs
crates/services/src/task/models/: task.rs
crates/services/src/task/mutations/: task.rs
crates/services/src/task/queries/: task.rs
crates/services/src/user/: mod.rs
crates/services/src/user/models/: user.rs
crates/services/src/user/mutations/: user.rs
crates/services/src/user/queries/: user.rs
src/: main.rs  pool.rs
src/routes/: auth.rs  mod.rs  ping.rs  task.rs
