[package]
authors = ["sawa-ko <56084970+sawa-ko@users.noreply.github.com>"]
name = "todo_api"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
migrations-init = "sea-orm-cli migrate init -d ./crates/migrations"
migrations-up = "sea-orm-cli migrate up -d ./crates/migrations"
migrations-generate = "sea-orm-cli migrate generate -d ./crates/migrations"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json", "secrets", "default"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = "1.0.203"
tokio = "1.38.0"
async-trait = "0.1.80"
sea-orm-rocket = "0.5.4"
database = { path = "./crates/database" }
migration = { path = "./crates/migrations" }

[workspace]
members = [
    "crates/database",
    "crates/migrations"
]

[workspace.dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json", "secrets", "default"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-rocket = "0.5.4"