[package]
authors = ["sawa-ko <56084970+sawa-ko@users.noreply.github.com>"]
name = "todo_api"
version = "0.1.0"
edition = "2021"
default-run = "todo_api"

[package.metadata.scripts]
migrations-init = "sea-orm-cli migrate init -d ./crates/migrations"
migrations-up = "sea-orm-cli migrate up -d ./crates/migrations"
migrations-generate = "sea-orm-cli migrate generate -d ./crates/migrations"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json", "secrets", "default"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = "1.38.0"
async-trait = "0.1.80"
sea-orm-rocket = "0.5.4"
database = { path = "./crates/database" }
migration = { path = "./crates/migrations" }
services  = { path = "./crates/services" }
dotenvy = "0.15.7"
memory-stats = "1.1.0"
jsonwebtoken = "9.3.0"

[workspace]
members = [
    "crates/database",
    "crates/migrations",
    "crates/services"
]

[workspace.dependencies]
rocket = { version = "0.5.1", features = ["json", "serde_json", "secrets", "default"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sea-orm-rocket = "0.5.4"
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }