[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["sawa-ko <56084970+sawa-ko@users.noreply.github.com>"]

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
database = { path = "../database" }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
